--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 .showBGImage {
-  background-image: url("assets/images/space.jpg");
+  background-image: url("assets/images/portfolio.jpg");
 }
 body {
   margin: 0;
