modified index css

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
-/* @import url("https://unpkg.com/@tailwindcss/typography@0.4.x/dist/typography.min.css"); */
-/* @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"); */
-/* ./src/index.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url("https://unpkg.com/@tailwindcss/typography@0.4.x/dist/typography.min.css");
+@import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300;400;500;700&display=swap");
 .cursive {
