--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@import url("https://unpkg.com/@tailwindcss/typography@0.4.x/dist/typography.min.css");
+@import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@300;400;500;700&display=swap");
+
+.cursive {
+  font-family: "Big Shoulders Stencil Display", cursive;
+  font-weight: 700;
+}
+
+.cursive p {
+  font-family: "Big Shoulders Stencil Display", cursive;
+  font-weight: 300;
+}
+.prose img {
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+}
+
+.home-name {
+  font-size: 150px;
+}
 .showBGImage {
   background-image: url("assets/images/portfolio.jpg");
   /* The image used */
