Feat: Implemented Helmet for SEO

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,11 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
