#Fix: update css

--- a/public/main.css
+++ b/public/main.css
@@ -33,3 +33,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
