Rosary Component Started

--- a/src/Styles/Services.css
+++ b/src/Styles/Services.css
@@ -70,5 +70,4 @@ body.dark-theme {
 .active-modal {
   opacity: 1;
   visibility: visible;
-}
-/*# sourceMappingURL=Services.css.map */
+}/*# sourceMappingURL=Services.css.map */
