--- a/src/Styles/Variables/Variables.css
+++ b/src/Styles/Variables/Variables.css
@@ -64,5 +64,4 @@ body.dark-theme {
   --container-color: hsl(200, 29%, 16%);
   --scroll-bar-color: hsl(200, 12%, 48%);
   --scroll-thumb-color: hsl(200, 12%, 36%);
-}
-/*# sourceMappingURL=Variables.css.map */
+}/*# sourceMappingURL=Variables.css.map */
