--- a/src/Styles/Portfolio.css
+++ b/src/Styles/Portfolio.css
@@ -71,22 +71,14 @@ body.dark-theme {
   width: 100%;
   height: 100%;
 }
-
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .swiper-slide img {
   display: block;
   width: 100%;
@@ -94,33 +86,25 @@ body.dark-theme {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .swiper-button-next::after, .swiper-button-prev::after {
   content: "";
 }
-
 .swiper-button-prev {
-  left: -.5rem;
+  left: -0.5rem;
 }
-
 .swiper-button-next {
-  right: -.5rem;
+  right: -0.5rem;
 }
-
 .swiper-portfolio-icon {
   font-size: 2rem;
   color: var(--first-color);
 }
-
 .swiper-container-horizontal > .swiper-pagination-bullets {
   bottom: -2.5rem;
 }
-
 .swiper-pagination-bullet-active {
   background-color: var(--first-color);
 }
-
 .swiper-button-prev, .swiper-button-next, .swiper-pagination-bullet {
   outline: none;
-}
-/*# sourceMappingURL=Portfolio.css.map */
+}/*# sourceMappingURL=Portfolio.css.map */
