--- a/src/Styles/Qualification.css
+++ b/src/Styles/Qualification.css
@@ -68,82 +68,62 @@ body.dark-theme {
 
 /*===== Qualification =====*/
 .qualification__tabs {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  justify-content: space-evenly;
   margin-bottom: 2rem;
 }
-
 .qualification__button {
   font-size: 1.125rem;
   font-weight: 500;
   cursor: pointer;
 }
-
 .qualification__button:hover {
-  color: #57b2e0;
+  color: hsl(200deg, 69%, 61%);
 }
-
 .qualification__icon {
   font-size: 1.8rem;
   margin-right: 0.25rem;
 }
-
 .qualification__data {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr max-content 1fr;
-      grid-template-columns: 1fr -webkit-max-content 1fr;
-      grid-template-columns: 1fr max-content 1fr;
-  -webkit-column-gap: 1.5rem;
-          column-gap: 1.5rem;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
+  grid-template-columns: 1fr max-content 1fr;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
-
 .qualification__title {
   font-size: 0.938rem;
   font-weight: 500;
 }
-
 .qualification__subtitle {
   display: inline-block;
   font-size: 0.813rem;
   margin-bottom: 1rem;
 }
-
 .qualification__calender {
   font-size: 0.813rem;
-  color: #6a767c;
+  color: hsl(200deg, 8%, 45%);
 }
-
 .qualification__rounder {
   display: inline-block;
   width: 13px;
   height: 13px;
-  background-color: #439ecb;
+  background-color: hsl(200deg, 57%, 53%);
   border-radius: 50%;
 }
-
 .qualification__line {
   display: block;
   width: 1px;
   height: 100%;
-  background-color: #57b2e0;
-  -webkit-transform: translate(6px, -7px);
-          transform: translate(6px, -7px);
+  background-color: hsl(200deg, 69%, 61%);
+  transform: translate(6px, -7px);
 }
-
 .qualification [data-content] {
   display: none;
 }
-
 .qualification__active[data-content] {
   display: block;
 }
-
 .qualification__button.qualification__active {
-  color: #57b2e0;
-}
-/*# sourceMappingURL=Qualification.css.map */
+  color: hsl(200deg, 69%, 61%);
+}/*# sourceMappingURL=Qualification.css.map */
