--- a/src/Styles/Rosary.css
+++ b/src/Styles/Rosary.css
@@ -66,26 +66,58 @@ body.dark-theme {
   --scroll-thumb-color: hsl(200, 12%, 36%);
 }
 
-/*===== Scroll up =====*/
-.scrollup {
-  position: fixed;
-  right: 1rem;
-  bottom: -20%;
-  background-color: hsl(200deg, 69%, 61%);
-  opacity: 0.8;
-  padding: 0 0.3rem;
-  border-radius: 0.4rem;
-  z-index: 10;
-  transition: 0.4s;
+/*===== Rosary =====*/
+.rosary__tabs {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
 }
-.scrollup:hover {
+.rosary__button {
+  font-size: 1.125rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.rosary__button:hover {
+  color: hsl(200deg, 69%, 61%);
+}
+.rosary__icon {
+  font-size: 1.8rem;
+  margin-right: 0.25rem;
+}
+.rosary__data {
+  display: grid;
+  grid-template-columns: 1fr -webkit-max-content 1fr;
+  grid-template-columns: 1fr max-content 1fr;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.rosary__title {
+  font-size: 0.938rem;
+  font-weight: 500;
+}
+.rosary__subtitle {
+  display: inline-block;
+  font-size: 0.813rem;
+  margin-bottom: 1rem;
+}
+.rosary__calender {
+  font-size: 0.813rem;
+  color: hsl(200deg, 8%, 45%);
+}
+.rosary__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
   background-color: hsl(200deg, 57%, 53%);
+  border-radius: 50%;
 }
-.scrollup__icon {
-  font-size: 1.5rem;
-  color: #FFF;
+.rosary__line {
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: hsl(200deg, 69%, 61%);
+  transform: translate(6px, -7px);
 }
-
-.show-scroll {
-  bottom: 5rem;
-}/*# sourceMappingURL=Footer.css.map */
+.rosary__button.rosary__active {
+  color: hsl(200deg, 69%, 61%);
+}/*# sourceMappingURL=Rosary.css.map */
