--- a/src/Styles/Testimonial.css
+++ b/src/Styles/Testimonial.css
@@ -70,15 +70,12 @@ body.dark-theme {
 .swiper-container .swiper-pagination-testimonial {
   bottom: 0;
 }
-
 .swiper-slide img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin-left: 1.5rem;
 }
-
 .swiper-pagination-bullet-active {
-  background-color: #57b2e0;
-}
-/*# sourceMappingURL=Testimonial.css.map */
+  background-color: hsl(200deg, 69%, 61%);
+}/*# sourceMappingURL=Testimonial.css.map */
