--- a/src/Styles/TopBar.css
+++ b/src/Styles/TopBar.css
@@ -70,32 +70,22 @@ body.dark-theme {
 .nav {
   max-width: 968px;
   height: 5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   font-weight: 600;
 }
-
 .nav__logo, .nav__toggle {
   color: var(--title-color);
   font-weight: 500;
 }
-
 .nav__logo:hover, .nav__toggle:hover {
   color: var(--first-color);
 }
-
 .nav__toggle {
   font-size: 1.1rem;
   cursor: pointer;
 }
-
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
@@ -104,52 +94,36 @@ body.dark-theme {
     width: 100%;
     padding: 2rem 1.5rem 4rem;
     background-color: var(--body-color);
-    -webkit-box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
     border-radius: 1.5rem 1.5rem 0;
-    -webkit-transition: .3s;
-    transition: .3s;
+    transition: 0.3s;
   }
 }
-
 .nav__list {
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
-
 .nav__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   font-size: 0.813rem;
   color: var(--title-color);
   font-weight: 500;
 }
-
 .nav__link:hover {
   color: var(--first-color);
 }
-
 .nav__icon {
   font-size: 1.2rem;
 }
-
 .nav__close {
   position: absolute;
   right: 1.33rem;
-  bottom: .5rem;
+  bottom: 0.5rem;
   font-size: 1.5rem;
   cursor: pointer;
 }
-
 .nav__close:hover {
   color: var(--first-color);
 }
@@ -157,7 +131,7 @@ body.dark-theme {
 /*Active menu*/
 .active::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
@@ -175,7 +149,5 @@ body.dark-theme {
 }
 
 .scroll-header {
-  -webkit-box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-}
-/*# sourceMappingURL=TopBar.css.map */
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}/*# sourceMappingURL=TopBar.css.map */
