--- a/src/Styles/Qualification.css
+++ b/src/Styles/Qualification.css
@@ -78,7 +78,7 @@ body.dark-theme {
   cursor: pointer;
 }
 .qualification__button:hover {
-  color: hsl(200deg, 69%, 61%);
+  color: hsl(200, 69%, 61%);
 }
 .qualification__icon {
   font-size: 1.8rem;
@@ -86,7 +86,6 @@ body.dark-theme {
 }
 .qualification__data {
   display: grid;
-  grid-template-columns: 1fr -webkit-max-content 1fr;
   grid-template-columns: 1fr max-content 1fr;
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -102,20 +101,20 @@ body.dark-theme {
 }
 .qualification__calender {
   font-size: 0.813rem;
-  color: hsl(200deg, 8%, 45%);
+  color: hsl(200, 8%, 45%);
 }
 .qualification__rounder {
   display: inline-block;
   width: 13px;
   height: 13px;
-  background-color: hsl(200deg, 57%, 53%);
+  background-color: hsl(200, 57%, 53%);
   border-radius: 50%;
 }
 .qualification__line {
   display: block;
   width: 1px;
   height: 100%;
-  background-color: hsl(200deg, 69%, 61%);
+  background-color: hsl(200, 69%, 61%);
   transform: translate(6px, -7px);
 }
 .qualification [data-content] {
@@ -125,5 +124,5 @@ body.dark-theme {
   display: block;
 }
 .qualification__button.qualification__active {
-  color: hsl(200deg, 69%, 61%);
+  color: hsl(200, 69%, 61%);
 }/*# sourceMappingURL=Qualification.css.map */
