--- a/src/Styles/Rosary.css
+++ b/src/Styles/Rosary.css
@@ -78,7 +78,7 @@ body.dark-theme {
   cursor: pointer;
 }
 .rosary__button:hover {
-  color: hsl(200deg, 69%, 61%);
+  color: hsl(200, 69%, 61%);
 }
 .rosary__icon {
   font-size: 1.8rem;
@@ -86,7 +86,6 @@ body.dark-theme {
 }
 .rosary__data {
   display: grid;
-  grid-template-columns: 1fr -webkit-max-content 1fr;
   grid-template-columns: 1fr max-content 1fr;
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -102,22 +101,22 @@ body.dark-theme {
 }
 .rosary__calender {
   font-size: 0.813rem;
-  color: hsl(200deg, 8%, 45%);
+  color: hsl(200, 8%, 45%);
 }
 .rosary__rounder {
   display: inline-block;
   width: 13px;
   height: 13px;
-  background-color: hsl(200deg, 57%, 53%);
+  background-color: hsl(200, 57%, 53%);
   border-radius: 50%;
 }
 .rosary__line {
   display: block;
   width: 1px;
   height: 100%;
-  background-color: hsl(200deg, 69%, 61%);
+  background-color: hsl(200, 69%, 61%);
   transform: translate(6px, -7px);
 }
 .rosary__button.rosary__active {
-  color: hsl(200deg, 69%, 61%);
+  color: hsl(200, 69%, 61%);
 }/*# sourceMappingURL=Rosary.css.map */
