--- a/src/Styles/Testimonial.css
+++ b/src/Styles/Testimonial.css
@@ -77,5 +77,5 @@ body.dark-theme {
   margin-left: 1.5rem;
 }
 .swiper-pagination-bullet-active {
-  background-color: hsl(200deg, 69%, 61%);
+  background-color: hsl(200, 69%, 61%);
 }/*# sourceMappingURL=Testimonial.css.map */
