--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -295,7 +295,6 @@ p.message {
 }
 .home__social {
   display: grid;
-  grid-template-columns: -webkit-max-content;
   grid-template-columns: max-content;
   row-gap: 1rem;
 }
@@ -396,7 +395,7 @@ p.message {
 }
 .skills__icon, .skills__arrow {
   font-size: 2rem;
-  color: hsl(200deg, 69%, 61%);
+  color: hsl(200, 69%, 61%);
 }
 .skills__icon {
   margin-right: 0.75rem;
@@ -406,7 +405,7 @@ p.message {
 }
 .skills__subtitle {
   font-size: 0.813rem;
-  color: hsl(200deg, 92%, 85%);
+  color: hsl(200, 92%, 85%);
 }
 .skills__arrow {
   margin-left: auto;
@@ -430,11 +429,11 @@ p.message {
   border-radius: 0.25rem;
 }
 .skills__bar {
-  background-color: hsl(200deg, 92%, 85%);
+  background-color: hsl(200, 92%, 85%);
 }
 .skills__percentage {
   display: block;
-  background-color: hsl(200deg, 69%, 61%);
+  background-color: hsl(200, 69%, 61%);
 }
 .skills__html {
   width: 90%;
@@ -487,10 +486,19 @@ p.message {
 .skills__illustrator {
   width: 45%;
 }
+.skills__unreal {
+  width: 55%;
+}
+.skills__cplus {
+  width: 75%;
+}
 .skills__unity {
   width: 65%;
 }
 .skills__csharp {
+  width: 65%;
+}
+.skillsphaser {
   width: 65%;
 }
 .skills__createjs {
@@ -504,7 +512,6 @@ p.message {
   transform: rotate(0deg);
 }
 .skills__open .skills__list {
-  height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   margin-bottom: 2.5rem;
@@ -533,7 +540,6 @@ p.message {
 }
 .qualification__data {
   display: grid;
-  grid-template-columns: 1fr -webkit-max-content 1fr;
   grid-template-columns: 1fr max-content 1fr;
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -919,7 +925,6 @@ p.message {
     gap: 0.5rem;
   }
   .services__container {
-    grid-template-columns: -webkit-max-content;
     grid-template-columns: max-content;
     justify-content: center;
   }
@@ -949,7 +954,6 @@ p.message {
 }
 @media screen and (min-width: 568px) {
   .home__content {
-    grid-template-columns: -webkit-max-content 1fr 1fr;
     grid-template-columns: max-content 1fr 1fr;
   }
   .home__data {
@@ -960,12 +964,12 @@ p.message {
     justify-self: center;
   }
   .about__container,
-.skills__container,
-.portfolio__content,
-.project__container,
-.anonymousadmin__container,
-.contact__container,
-.footer__container {
+  .skills__container,
+  .portfolio__content,
+  .project__container,
+  .anonymousadmin__container,
+  .contact__container,
+  .footer__container {
     grid-template-columns: repeat(2, 1fr);
   }
   .qualification__sections {
@@ -993,8 +997,8 @@ p.message {
     bottom: initial;
   }
   .header,
-.main,
-.footer__container {
+  .main,
+  .footer__container {
     padding: 0 1rem;
   }
   .nav {
@@ -1091,7 +1095,6 @@ p.message {
     background-color: var(--first-color-second);
     border-radius: 1rem;
     padding: 3rem 2.5rem 0;
-    grid-template-columns: 1fr -webkit-max-content;
     grid-template-columns: 1fr max-content;
     -moz-column-gap: 3rem;
          column-gap: 3rem;
@@ -1119,8 +1122,8 @@ p.message {
 }
 @media screen and (min-width: 1024px) {
   .header,
-.main,
-.footer__container {
+  .main,
+  .footer__container {
     padding: 0;
   }
   .home__blob {
