--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -463,10 +463,19 @@ p.message{
     &__illustrator{
         width: 45%;
     }
+    &__unreal{
+        width: 55%;
+    }
+    &__cplus{
+        width: 75%;
+    }
     &__unity{
         width: 65%;
     }
     &__csharp{
+        width: 65%;
+    }
+    &phaser{
         width: 65%;
     }
     &__createjs{
