--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -71,7 +71,7 @@ body.dark-theme {
   position: fixed;
   right: 1rem;
   bottom: -20%;
-  background-color: hsl(200deg, 69%, 61%);
+  background-color: hsl(200, 69%, 61%);
   opacity: 0.8;
   padding: 0 0.3rem;
   border-radius: 0.4rem;
@@ -79,7 +79,7 @@ body.dark-theme {
   transition: 0.4s;
 }
 .scrollup:hover {
-  background-color: hsl(200deg, 57%, 53%);
+  background-color: hsl(200, 57%, 53%);
 }
 .scrollup__icon {
   font-size: 1.5rem;
