--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -489,7 +489,7 @@ p.message {
 .skills__unreal {
   width: 55%;
 }
-.skills__cplus {
+.skills__cplusplus {
   width: 75%;
 }
 .skills__unity {
@@ -498,7 +498,7 @@ p.message {
 .skills__csharp {
   width: 65%;
 }
-.skillsphaser {
+.skills__phaser {
   width: 65%;
 }
 .skills__createjs {
