--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -466,7 +466,7 @@ p.message{
     &__unreal{
         width: 55%;
     }
-    &__cplus{
+    &__cplusplus{
         width: 75%;
     }
     &__unity{
@@ -475,7 +475,7 @@ p.message{
     &__csharp{
         width: 65%;
     }
-    &phaser{
+    &__phaser{
         width: 65%;
     }
     &__createjs{
